--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -1078,6 +1078,434 @@ it’s also possible to change a mutable object in the enclosing scope in 2.X an
 
 ## Arguments 参数
 
+*argument passing* —the way that objects are sent to functions as inputs. arguments (a.k.a. parameters) are assigned to names in a function, but they have more to do with object references than with variable scopes.
+
+### Argument-Passing Basics
+
+Here is a rundown of the key points in passing arguments to functions:
+
+- **Arguments are passed by automatically assigning objects to local variable names.** 
+
+  > Function arguments—references to (possibly) shared objects sent by the caller—are just another instance of Python assignment at work. Because references are implemented as pointers, all arguments are, in effect, passed by pointer. Objects passed as arguments are never automatically copied.
+
+
+- **Assigning to argument names inside a function does not affect the caller.** 
+
+  > Argument names in the function header become new, local names when the function runs, in the scope of the function. There is no aliasing between function argument names and variable names in the scope of the caller.
+
+
+- **Changing a mutable object argument in a function may impact the caller.** 
+
+  > On the other hand, as arguments are simply assigned to passed-in objects, functions can change passed-in mutable objects in place, and the results may affect the caller. Mutable arguments can be input and output for functions.
+
+> Python’s pass-by-assignment scheme isn’t quite the same as C++’s reference parameters option, but it turns out to be very similar to the argument-passing model of the C language (and others) in practice:
+>
+> - **Immutable arguments are effectively passed “by value.”** Objects such as integers and strings are passed by object reference instead of by copying, but because you can’t change immutable objects in place anyhow, the effect is much like making a copy.
+> - **Mutable arguments are effectively passed “by pointer.”** Objects such as lists and dictionaries are also passed by object reference, which is similar to the way C passes arrays as pointers—mutable objects can be changed in place in the function, much like C arrays.
+
+#### Arguments and Shared References
+
+```
+>>> def f(a):		# a is assigned to (references) the passed object 
+		a = 99		# Changes local variable a only
+		
+>>> b = 88
+>>> f(b)			# a and b both reference same 88 initially 
+>>> print(b) 		# b is not changed
+88
+```
+
+When arguments are passed mutable objects like lists and dictionaries, we also need to be aware that in-place changes to such objects may live on after a function exits, and hence impact callers.
+
+```
+>>> def changer(a, b):		# Arguments assigned references to objects
+...     a = 2				# Changes local name's value only
+...     b[0] = 'spam'		# Changes shared object in place
+... 
+>>> X = 1
+>>> L = [1, 2]				# Caller:
+>>> changer(X, L)			# Pass immutable and mutable objects
+>>> X, L					# X is unchanged, L is different!
+(1, ['spam', 2])
+```
+
+> - Because a is a local variable name in the function’s scope, the first assignment has no effect on the caller—it simply changes the local variable a to reference a completely different object, and does not change the binding of the name X in the caller’s scope. This is the same as in the prior example.
+> - Argument b is a local variable name, too, but it is passed a mutable object (the list that L references in the caller’s scope). As the second assignment is an in-place object change, the result of the assignment to b[0] in the function impacts the value of L after the function returns.
+
+#### Avoiding Mutable Argument Changes
+
+Arguments are normally passed to functions by reference because that is what we normally want. It means we can pass large objects around our programs without making multiple copies along the way, and we can easily update these objects as we go. Python’s class model depends upon changing a passed-in “self” argument in place, to update object state.
+
+If we don’t want in-place changes within functions to impact objects we pass to them, though, we can simply make explicit copies of mutable objects
+
+```
+>>> def changer(a, b):		
+...     a = 2				
+...     b[0] = 'spam'		
+... 
+>>> X = 1
+>>> L = [1, 2] 
+>>> changer(X, L[:])	# Pass a copy, so our 'L' does not change
+>>> X, L
+(1, [1, 2])
+```
+
+We can also copy within the function itself, if we never want to change passed-in ob-jects, regardless of how the function is called:
+
+```
+>>> def changer(a, b):
+...     b = b[:]			# Copy input list so we don't impact caller
+...     a = 2
+...     b[0] = 'spam'		# Changes our list copy only
+... 
+>>> X = 1
+>>> L = [1, 2]
+>>> changer(X, L)
+>>> X, L
+(1, [1, 2])
+```
+
+**Both of these copying schemes don’t stop the function from changing the object—they just prevent those changes from impacting the caller.**
+
+To really prevent changes, we can always convert to immutable objects to force the issue. Tuples, for example, raise an exception when changes are attempted:
+
+**if objects change out from under you unexpectedly, check whether a called function might be responsible, and make copies when objects are passed if needed.**
+
+
+
+#### Simulating Output Parameters and Multiple Results
+
+because `return` can send back any sort of object, it can return multiple values by packaging them in a tuple or other collection type.
+
+```
+>>> def multiple(x, y):
+...     x = 2				# Changes local names only
+...     y = [3, 4]
+...     return x, y			# Return multiple new values in a tuple
+... 
+>>> X = 1
+>>> L = [1, 2]
+>>> X, L = multiple(X, L)	# Assign results to caller's names
+>>> X, L
+(2, [3, 4])
+```
+
+
+
+### Special Argument-Matching Modes 特定参数匹配模型
+
+By default, arguments are matched by position, from left to right, and you must pass exactly as many arguments as there are argument names in the function header. How-ever, you can also specify matching by name, provide default values, and use collectors for extra arguments.
+
+
+
+#### Argument Matching Basics
+
+these special modes are optional and deal only with matching objects to names; the underlying passing mechanism after the matching takes place is still assignment. here’s a synopsis of the available tools:
+
+- **Positionals: matched from left to right** 
+
+  > The normal case, which we’ve mostly been using so far, is to match passed argument values to argument names in a function header by position, from left to right.
+
+
+- **Keywords: matched by argument name** 
+
+  > Alternatively, callers can specify which argument in the function is to receive a value by using the argument’s name in the call, with the `name=value` syntax.
+
+
+- **Defaults: specify values for optional arguments that aren’t passed** 
+
+  > Functions themselves can specify default values for arguments to receive if the call passes too few values, again using the name=value syntax.
+
+
+- **Varargs collecting: collect arbitrarily many positional or keyword arguments** 
+
+  > Functions can use special arguments preceded with one or two * characters to collect an arbitrary number of possibly extra arguments. This feature is often referred to as varargs, after a variable-length argument list tool in the C language; in Python, the arguments are collected in a normal object.
+
+
+- **Varargs unpacking: pass arbitrarily many positional or keyword arguments** 
+
+  > Callers can also use the * syntax to unpack argument collections into separate arguments. This is the inverse of a * in a function header—in the header it means collect arbitrarily many arguments, while in the call it means unpack arbitrarily many arguments, and pass them individually as discrete values.
+
+
+- **Keyword-only arguments: arguments that must be passed by name** 
+
+  > In Python 3.X (but not 2.X), functions can also specify arguments that must be passed by name with keyword arguments, not by position. Such arguments are typically used to define configuration options in addition to actual arguments.
+
+  ​
+
+#### Argument Matching Syntax
+
+```
+Function argument-matching forms
+
+Syntax					 Location  	Interpretation
+==================================================================================================
+func(value)				 Caller	   	Normal argument: matched by position
+--------------------------------------------------------------------------------------------------
+func(name=value)		 Caller	   	Keyword argument: matched by name
+--------------------------------------------------------------------------------------------------
+func(*iterable)			 Caller	   	Pass all objects in iterable as individual positional 											arguments
+--------------------------------------------------------------------------------------------------
+func(**dict)			 Caller    	Pass all key/value pairs in dict as individual keyword 											arguments
+--------------------------------------------------------------------------------------------------
+def func(name)			 Function	Normal argument: matches any passed value by position or name
+--------------------------------------------------------------------------------------------------
+def func(name=value)	 Function	Default argument value, if not passed in the call
+--------------------------------------------------------------------------------------------------
+def func(*name)			 Function	Matches and collects remaining positional arguments in a tuple
+--------------------------------------------------------------------------------------------------
+def func(**name)		 Function	Matches and collects remaining keyword arguments in a 											dictionary
+--------------------------------------------------------------------------------------------------
+def func(*other, name)	 Function	Arguments that must be passed by keyword only in calls (3.X)
+--------------------------------------------------------------------------------------------------
+def func(*, name=value)	 Function	Arguments that must be passed by keyword only in calls (3.X)
+```
+
+These special matching modes break down into function calls and definitions as fol-lows:
+
+- In a function call (the first four rows of the table), simple values are matched by position, but using the `name=value` form tells Python to match by name to arguments instead; these are called keyword arguments. Using a `*iterable` or `**dict` in a call allows us to package up arbitrarily many positional or keyword objects in sequences (and other iterables) and dictionaries, respectively, and unpack them as separate, individual arguments when they are passed to the function.
+
+
+- In a function header (the rest of the table), a simple `name` is matched by position or name depending on how the caller passes it, but the `name=value` form specifies a default value. The `*name` form collects any extra unmatched positional arguments in a tuple, and the `**name` form collects extra keyword arguments in a dictionary. In Python 3.X, any normal or defaulted argument names following a `*name` or a bare `*` are keyword-only arguments and must be passed by keyword in calls.
+
+#### The Gritty Details
+
+If you choose to use and combine the special argument-matching modes, Python will ask you to follow these ordering rules among the modes’ optional components:
+
+- **In a function call**, arguments must appear in this order: 
+  1. any positional arguments ( `value` ); 
+  2. followed by a combination of any keyword arguments ( `name=value` ) 
+  3. and the `*iterable` form; 
+  4. followed by the `**dict` form.
+
+
+- **In a function header**, arguments must appear in this order: 
+  1. any normal arguments (`name`); 
+  2. followed by any default arguments (`name=value`); 
+  3. followed by the `*name` (or `*` in 3.X) form; 
+  4. followed by any `name` or `name=value` keyword-only arguments (in 3.X); 
+  5. followed by the `**name` form.
+
+> In both the call and header, the `**args` form must appear last if present. If you mix arguments in any other order, you will get a syntax error because the combinations can be ambiguous.
+
+
+
+**The steps that Python internally carries out to match arguments before assignment can roughly be described as follows:**
+
+1. Assign nonkeyword arguments by position.
+
+2. Assign keyword arguments by matching names.
+
+3. Assign extra nonkeyword arguments to *name tuple.
+
+4. Assign extra keyword arguments to **name dictionary.
+
+5. Assign default values to unassigned arguments in header.
+
+After this, Python checks to make sure each argument is passed just one value; if not, an error is raised. When all matching is complete, Python assigns argument names to the objects passed to them.
+
+> In Python 3.X only, argument names in a function header can also have **annotation values**, specified as `name:value` (or `name:value=default` when defaults are present). This is simply additional syntax for arguments and does not augment or change the argument-ordering rules described here. The function itself can also have an annotation value, given as `def f()->value`. Python attaches annotation values to the function object.
+
+
+
+#### Keyword and Default Examples
+
+##### Position
+
+If you don’t use any special matching syntax, Python matches names by position from left to right
+
+```
+>>> def f(a, b, c):
+...     print(a, b, c)
+... 
+>>> f(1, 2, 3)
+1 2 3
+```
+
+##### Keywords
+
+Keyword arguments allow us to match by name, instead of by position.
+
+```
+>>> def f(a, b, c):
+...     print(a, b, c)
+... 
+>>> f(c=30, b=20, a=10)
+10 20 30
+```
+
+all positionals are matched first from left to right in the header, before keywords are matched by name:
+
+```
+>>> def f(a, b, c):
+...     print(a, b, c)
+... 
+>>> f(1, c=3, b=2)		# a gets 1 by position, b and c passed by name
+1 2 3
+```
+
+##### Defaults
+
+defaults allow us to make selected function arguments optional; if not passed a value, the argument is assigned its default before the function runs.
+
+```
+>>> def f(a, b=2, c=3):		# a required, b and c optional(defaults)
+...     print(a, b, c)
+... 
+>>> f(1)			# Use defaults
+1 2 3
+>>> f(a=1)
+1 2 3
+>>> f(1, 4)			# Override defaults
+1 4 3
+>>> f(1, 4, 5)
+1 4 5
+>>> f(1, c=6)		# Choose defaults
+1 2 6
+```
+
+> the special `name=value` syntax
+>
+> - **in the call** it means a match-by-name keyword argument, 
+>
+>
+> - **in the header** it specifies a default for an optional argument.
+
+##### Combining keywords and defaults
+
+when keyword arguments are used in the call, the order in which the arguments are listed doesn’t matter
+
+```
+>>> def func(spam, eggs, toast=0, ham=0):
+...     print((spam, eggs, toast, ham))
+... 
+>>> func(1, 2)
+(1, 2, 0, 0)
+>>> func(1, ham=1, eggs=0)
+(1, 0, 0, 1)
+>>> func(spam=1, eggs=0)
+(1, 0, 0, 0)
+>>> func(toast=1, eggs=2, spam=3)
+(3, 2, 1, 0)
+>>> func(1, 2, 3, 4)
+(1, 2, 3, 4)
+```
+
+
+
+#### Arbitrary Arguments Examples
+
+The last two matching extensions, * and **, are designed to support functions that take any number of arguments. Both can appear in either the function definition or a function call, and they have related purposes in the two locations.
+
+the `*` / `**` starred-argument syntax in the function header and the function call ：
+
+1. **in the header it collects any number of arguments**
+2. **in the call it unpacks any number of arguments.**
+3. **In both, one star means positionals, and two applies to key-words.**
+
+
+
+##### Headers: Collecting arguments
+
+1. `*args`
+
+The first use, in the function definition, collects unmatched positional arguments into a tuple. **When this function is called, Python collects all the positional arguments into a new tuple and assigns the variable `args` to that tuple**:
+
+> Because it is a normal tuple object, it can be indexed, stepped through with a `for` loop, and so on.
+
+```
+>>> def f(*args):
+...     print(args)
+... 
+>>> f()
+()
+>>> f(1)
+(1,)
+>>> f(1, 2, 3, 4)
+(1, 2, 3, 4)
+```
+
+2. `**args`
+
+The ** feature is similar, but **it only works for keyword arguments**—**it collects them into a new dictionary**, which can then be processed with normal dictionary tools. In a sense, the `**` form allows you to **convert from keywords to dictionaries,** which you can then step through with keys calls, dictionary iterators, and the like (this is roughly what the dict call does when passed keywords, but **it returns the new dictionary**):
+
+```
+>>> def f(**args):
+...     print(args)
+... 
+>>> f()
+{}
+>>> f(a=1, b=2)
+{'b': 2, 'a': 1}
+```
+
+3. combine normal arguments, the `*`, and the `**` to implement wildly flexible call signatures.
+
+```
+>>> def f(a, *pargs, **kargs):
+...     print(a, pargs, kargs)
+... 
+>>> f(1, 2, 3, x=1, y=2)
+1 (2, 3) {'y': 2, 'x': 1}
+```
+
+
+
+##### Calls: Unpacking arguments
+
+1. `*` syntax
+
+```
+>>> def func(a, b, c, d):
+...     print(a, b, c, d)
+... 
+>>> args = (1, 2)
+>>> args += (3, 4)
+>>> func(*args)				# Same as func(1, 2, 3, 4)
+1 2 3 4
+```
+
+the `*pargs` form in a call is an iteration context, so technically it accepts any iterable object, not just tuples or other sequences
+
+```
+func(*open('fname'))		
+```
+
+2. `**` syntax in a function call unpacks a dictionary of key/value pairs into separate keyword arguments:
+
+```
+>>> def func(a, b, c, d):
+...     print(a, b, c, d)
+... 
+>>> args = {'a':1, 'b':2, 'c':3}
+>>> args['d'] = 4
+>>> func(**args)			# Same as func(a=1, b=2, c=3, d=4)
+1 2 3 4
+```
+
+3. combine normal, positional, and keyword arguments in the call:
+
+```
+>>> func(*(1, 2), **{'d': 4, 'c': 3}) 		# Same as func(1, 2, d=4, c=3)
+1 2 3 4
+>>> func(1, *(2, 3), **{'d': 4}) 			# Same as func(1, 2, 3, d=4)
+1 2 3 4
+>>> func(1, c=3, *(2,), **{'d': 4}) 		# Same as func(1, 2, c=3, d=4)
+1 2 3 4
+>>> func(1, *(2, 3), d=4) 					# Same as func(1, 2, 3, d=4)
+1 2 3 4
+>>> func(1, *(2,), c=3, **{'d':4}) 			# Same as func(1, 2, c=3, d=4)
+1 2 3 4
+```
+
+
+
+##### Applying functions generically
+
+
+
+
+
 
 
 
