--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -1502,9 +1502,16 @@ func(*open('fname'))
 
 ##### Applying functions generically
 
+you can use `if` logic to select from a set of functions and argument lists, and call any of them generically (functions in some of the following examples are hypothetical):
 
-
-
+```
+if sometest:
+	action, args = func1, (1,) 			# Call func1 with one arg in this case
+else:
+	action, args = func2, (1, 2, 3) 	# Call func2 with three args here
+...etc...
+action(*args)							# Dispatch generically
+```
 
 
 
