--- a/Python/Python Study Notes/03. Numbers.md
+++ b/Python/Python Study Notes/03. Numbers.md
@@ -201,7 +201,7 @@ The F digits in the hex value, for example, each mean 15 in decimal and a 4-bit 
 #### converts a string of digits to an integer
 
 ```
->>> 64, 0o100, 0x40, 0b1000000 				# Digits=>numbers in scripts and strings
+>>> 64, 0o100, 0x40, 0b1000000 		# Digits=>numbers in scripts and strings
 (64, 64, 64, 64)
 
 >>> int('64'), int('100', 8), int('40', 16), int('1000000', 2) 
@@ -210,6 +210,22 @@ The F digits in the hex value, for example, each mean 15 in decimal and a 4-bit 
 >>> int('0x40', 16), int('0b1000000', 2)	 # Literal forms supported too 
 (64, 64)
 ```
+
+#### int()
+
+```
+>>> int('1101', 2)		# Convert binary to integer: built-in
+13
+```
+
+#### bin()
+
+```
+>>> bin(13)			# Convert integer to binary: built-in
+'0b1101'
+```
+
+
 
 
 
