--- a/Python/Python Study Notes/04. String 字符串和编码.md
+++ b/Python/Python Study Notes/04. String 字符串和编码.md
@@ -686,6 +686,8 @@ Hello World !
 
 两种写法完全是等价的。
 
+### bytes `b`前缀
+
 由于Python的字符串类型是`str`，在内存中以Unicode表示，一个字符对应若干个字节。如果要在网络上传输，或者保存到磁盘上，就需要把`str`变为以字节为单位的`bytes`。
 
 Python对`bytes`类型的数据用带`b`前缀的单引号或双引号表示：
@@ -1010,6 +1012,349 @@ I love python
 
 
 
+## bytes
+
+#### class bytes(object)
+
+```
+Help on class bytes in module builtins:
+
+class bytes(object)
+ |  bytes(iterable_of_ints) -> bytes
+ |  bytes(string, encoding[, errors]) -> bytes
+ |  bytes(bytes_or_buffer) -> immutable copy of bytes_or_buffer
+ |  bytes(int) -> bytes object of size given by the parameter initialized with null bytes
+ |  bytes() -> empty bytes object
+ |  
+ |  Construct an immutable array of bytes from:
+ |    - an iterable yielding integers in range(256)
+ |    - a text string encoded using the specified encoding
+ |    - any object implementing the buffer API.
+ |    - an integer
+ |  
+ |  Methods defined here:
+ |  
+ |  __add__(self, value, /)
+ |      Return self+value.
+ |  
+ |  __contains__(self, key, /)
+ |      Return key in self.
+ |  
+ |  __eq__(self, value, /)
+ |      Return self==value.
+ |  
+ |  __ge__(self, value, /)
+ |      Return self>=value.
+ |  
+ |  __getattribute__(self, name, /)
+ |      Return getattr(self, name).
+ |  
+ |  __getitem__(self, key, /)
+ |      Return self[key].
+ |  
+ |  __getnewargs__(...)
+ |  
+ |  __gt__(self, value, /)
+ |      Return self>value.
+ |  
+ |  __hash__(self, /)
+ |      Return hash(self).
+ |  
+ |  __iter__(self, /)
+ |      Implement iter(self).
+ |  
+ |  __le__(self, value, /)
+ |      Return self<=value.
+ |  
+ |  __len__(self, /)
+ |      Return len(self).
+ |  
+ |  __lt__(self, value, /)
+ |      Return self<value.
+ |  
+ |  __mul__(self, value, /)
+ |      Return self*value.n
+ |  
+ |  __ne__(self, value, /)
+ |      Return self!=value.
+ |  
+ |  __new__(*args, **kwargs) from builtins.type
+ |      Create and return a new object.  See help(type) for accurate signature.
+ |  
+ |  __repr__(self, /)
+ |      Return repr(self).
+ |  
+ |  __rmul__(self, value, /)
+ |      Return self*value.
+ |  
+ |  __sizeof__(...)
+ |      B.__sizeof__() -> size of B in memory, in bytes
+ |  
+ |  __str__(self, /)
+ |      Return str(self).
+ |  
+ |  capitalize(...)
+ |      B.capitalize() -> copy of B
+ |      
+ |      Return a copy of B with only its first character capitalized (ASCII)
+ |      and the rest lower-cased.
+ |  
+ |  center(...)
+ |      B.center(width[, fillchar]) -> copy of B
+ |      
+ |      Return B centered in a string of length width.  Padding is
+ |      done using the specified fill character (default is a space).
+ |  
+ |  count(...)
+ |      B.count(sub[, start[, end]]) -> int
+ |      
+ |      Return the number of non-overlapping occurrences of substring sub in
+ |      string B[start:end].  Optional arguments start and end are interpreted
+ |      as in slice notation.
+ |  
+ |  decode(...)
+ |      B.decode(encoding='utf-8', errors='strict') -> str
+ |      
+ |      Decode B using the codec registered for encoding. Default encoding
+ |      is 'utf-8'. errors may be given to set a different error
+ |      handling scheme.  Default is 'strict' meaning that encoding errors raise
+ |      a UnicodeDecodeError.  Other possible values are 'ignore' and 'replace'
+ |      as well as any other name registerd with codecs.register_error that is
+ |      able to handle UnicodeDecodeErrors.
+ |  
+ |  endswith(...)
+ |      B.endswith(suffix[, start[, end]]) -> bool
+ |      
+ |      Return True if B ends with the specified suffix, False otherwise.
+ |      With optional start, test B beginning at that position.
+ |      With optional end, stop comparing B at that position.
+ |      suffix can also be a tuple of bytes to try.
+ |  
+ |  expandtabs(...)
+ |      B.expandtabs(tabsize=8) -> copy of B
+ |      
+ |      Return a copy of B where all tab characters are expanded using spaces.
+ |      If tabsize is not given, a tab size of 8 characters is assumed.
+ |  
+ |  find(...)
+ |      B.find(sub[, start[, end]]) -> int
+ |      
+ |      Return the lowest index in B where substring sub is found,
+ |      such that sub is contained within B[start:end].  Optional
+ |      arguments start and end are interpreted as in slice notation.
+ |      
+ |      Return -1 on failure.
+ |  
+ |  fromhex(...) from builtins.type
+ |      bytes.fromhex(string) -> bytes
+ |      
+ |      Create a bytes object from a string of hexadecimal numbers.
+ |      Spaces between two numbers are accepted.
+ |      Example: bytes.fromhex('B9 01EF') -> b'\xb9\x01\xef'.
+ |  
+ |  index(...)
+ |      B.index(sub[, start[, end]]) -> int
+ |      
+ |      Like B.find() but raise ValueError when the substring is not found.
+ |  
+ |  isalnum(...)
+ |      B.isalnum() -> bool
+ |      
+ |      Return True if all characters in B are alphanumeric
+ |      and there is at least one character in B, False otherwise.
+ |  
+ |  isalpha(...)
+ |      B.isalpha() -> bool
+ |      
+ |      Return True if all characters in B are alphabetic
+ |      and there is at least one character in B, False otherwise.
+ |  
+ |  isdigit(...)
+ |      B.isdigit() -> bool
+ |      
+ |      Return True if all characters in B are digits
+ |      and there is at least one character in B, False otherwise.
+ |  
+ |  islower(...)
+ |      B.islower() -> bool
+ |      
+ |      Return True if all cased characters in B are lowercase and there is
+ |      at least one cased character in B, False otherwise.
+ |  
+ |  isspace(...)
+ |      B.isspace() -> bool
+ |      
+ |      Return True if all characters in B are whitespace
+ |      and there is at least one character in B, False otherwise.
+ |  
+ |  istitle(...)
+ |      B.istitle() -> bool
+ |      
+ |      Return True if B is a titlecased string and there is at least one
+ |      character in B, i.e. uppercase characters may only follow uncased
+ |      characters and lowercase characters only cased ones. Return False
+ |      otherwise.
+ |  
+ |  isupper(...)
+ |      B.isupper() -> bool
+ |      
+ |      Return True if all cased characters in B are uppercase and there is
+ |      at least one cased character in B, False otherwise.
+ |  
+ |  join(...)
+ |      B.join(iterable_of_bytes) -> bytes
+ |      
+ |      Concatenate any number of bytes objects, with B in between each pair.
+ |      Example: b'.'.join([b'ab', b'pq', b'rs']) -> b'ab.pq.rs'.
+ |  
+ |  ljust(...)
+ |      B.ljust(width[, fillchar]) -> copy of B
+ |      
+ |      Return B left justified in a string of length width. Padding is
+ |      done using the specified fill character (default is a space).
+ |  
+ |  lower(...)
+ |      B.lower() -> copy of B
+ |      
+ |      Return a copy of B with all ASCII characters converted to lowercase.
+ |  
+ |  lstrip(...)
+ |      B.lstrip([bytes]) -> bytes
+ |      
+ |      Strip leading bytes contained in the argument.
+ |      If the argument is omitted, strip leading ASCII whitespace.
+ |  
+ |  partition(...)
+ |      B.partition(sep) -> (head, sep, tail)
+ |      
+ |      Search for the separator sep in B, and return the part before it,
+ |      the separator itself, and the part after it.  If the separator is not
+ |      found, returns B and two empty bytes objects.
+ |  
+ |  replace(...)
+ |      B.replace(old, new[, count]) -> bytes
+ |      
+ |      Return a copy of B with all occurrences of subsection
+ |      old replaced by new.  If the optional argument count is
+ |      given, only first count occurances are replaced.
+ |  
+ |  rfind(...)
+ |      B.rfind(sub[, start[, end]]) -> int
+ |      
+ |      Return the highest index in B where substring sub is found,
+ |      such that sub is contained within B[start:end].  Optional
+ |      arguments start and end are interpreted as in slice notation.
+ |      
+ |      Return -1 on failure.
+ |  
+ |  rindex(...)
+ |      B.rindex(sub[, start[, end]]) -> int
+ |      
+ |      Like B.rfind() but raise ValueError when the substring is not found.
+ |  
+ |  rjust(...)
+ |      B.rjust(width[, fillchar]) -> copy of B
+ |      
+ |      Return B right justified in a string of length width. Padding is
+ |      done using the specified fill character (default is a space)
+ |  
+ |  rpartition(...)
+ |      B.rpartition(sep) -> (head, sep, tail)
+ |      
+ |      Search for the separator sep in B, starting at the end of B,
+ |      and return the part before it, the separator itself, and the
+ |      part after it.  If the separator is not found, returns two empty
+ |      bytes objects and B.
+ |  
+ |  rsplit(...)
+ |      B.rsplit(sep=None, maxsplit=-1) -> list of bytes
+ |      
+ |      Return a list of the sections in B, using sep as the delimiter,
+ |      starting at the end of B and working to the front.
+ |      If sep is not given, B is split on ASCII whitespace characters
+ |      (space, tab, return, newline, formfeed, vertical tab).
+ |      If maxsplit is given, at most maxsplit splits are done.
+ |  
+ |  rstrip(...)
+ |      B.rstrip([bytes]) -> bytes
+ |      
+ |      Strip trailing bytes contained in the argument.
+ |      If the argument is omitted, strip trailing ASCII whitespace.
+ |  
+ |  split(...)
+ |      B.split(sep=None, maxsplit=-1) -> list of bytes
+ |      
+ |      Return a list of the sections in B, using sep as the delimiter.
+ |      If sep is not specified or is None, B is split on ASCII whitespace
+ |      characters (space, tab, return, newline, formfeed, vertical tab).
+ |      If maxsplit is given, at most maxsplit splits are done.
+ |  
+ |  splitlines(...)
+ |      B.splitlines([keepends]) -> list of lines
+ |      
+ |      Return a list of the lines in B, breaking at line boundaries.
+ |      Line breaks are not included in the resulting list unless keepends
+ |      is given and true.
+ |  
+ |  startswith(...)
+ |      B.startswith(prefix[, start[, end]]) -> bool
+ |      
+ |      Return True if B starts with the specified prefix, False otherwise.
+ |      With optional start, test B beginning at that position.
+ |      With optional end, stop comparing B at that position.
+ |      prefix can also be a tuple of bytes to try.
+ |  
+ |  strip(...)
+ |      B.strip([bytes]) -> bytes
+ |      
+ |      Strip leading and trailing bytes contained in the argument.
+ |      If the argument is omitted, strip leading and trailing ASCII whitespace.
+ |  
+ |  swapcase(...)
+ |      B.swapcase() -> copy of B
+ |      
+ |      Return a copy of B with uppercase ASCII characters converted
+ |      to lowercase ASCII and vice versa.
+ |  
+ |  title(...)
+ |      B.title() -> copy of B
+ |      
+ |      Return a titlecased version of B, i.e. ASCII words start with uppercase
+ |      characters, all remaining cased characters have lowercase.
+ |  
+ |  translate(...)
+ |      B.translate(table[, deletechars]) -> bytes
+ |      
+ |      Return a copy of B, where all characters occurring in the
+ |      optional argument deletechars are removed, and the remaining
+ |      characters have been mapped through the given translation
+ |      table, which must be a bytes object of length 256.
+ |  
+ |  upper(...)
+ |      B.upper() -> copy of B
+ |      
+ |      Return a copy of B with all ASCII characters converted to uppercase.
+ |  
+ |  zfill(...)
+ |      B.zfill(width) -> copy of B
+ |      
+ |      Pad a numeric string B with zeros on the left, to fill a field
+ |      of the specified width.  B is never truncated.
+ |  
+ |  ----------------------------------------------------------------------
+ |  Static methods defined here:
+ |  
+ |  maketrans(...)
+ |      B.maketrans(frm, to) -> translation table
+ |      
+ |      Return a translation table (a bytes object of length 256) suitable
+ |      for use in the bytes or bytearray translate method where each byte
+ |      in frm is mapped to the byte at the same position in to.
+ |      The bytes objects frm and to must be of the same length.
+```
+
+
+
 
 
 ## python的字符串内建函数
@@ -1234,35 +1579,73 @@ str.encode(encoding='UTF-8',errors='strict')
 
 该方法返回编码后的字符串，它是一个 bytes 对象。
 
-> **encode**(...)
+> ```
+> Help on method_descriptor:
 >
->     S.encode(encoding='utf-8', errors='strict') -> bytes
->
->     
->
->     Encode S using the codec registered for encoding. Default encoding
->
->     is 'utf-8'. errors may be given to set a different error
->
->     handling scheme. Default is 'strict' meaning that encoding errors raise
->
->     a UnicodeEncodeError. Other possible values are 'ignore', 'replace' and
->
->     'xmlcharrefreplace' as well as any other name registered with
->
->     codecs.register_error that can handle UnicodeEncodeErrors.
+> encode(...)
+>     S.encode(encoding='utf-8', errors='strict') -> bytes
+>     
+>     Encode S using the codec registered for encoding. Default encoding
+>     is 'utf-8'. errors may be given to set a different error
+>     handling scheme. Default is 'strict' meaning that encoding errors raise
+>     a UnicodeEncodeError. Other possible values are 'ignore', 'replace' and
+>     'xmlcharrefreplace' as well as any other name registered with
+>     codecs.register_error that can handle UnicodeEncodeErrors.
+> ```
 
 ```
 >>> "你好".encode("UTF-8")
 b'\xe4\xbd\xa0\xe5\xa5\xbd'
 >>> "你好".encode("GBK")
 b'\xc4\xe3\xba\xc3'
+>>> 'ABC'.encode('ascii')
+b'ABC'
 
 >>> "你好".encode("utf-8","strict")
 b'\xe4\xbd\xa0\xe5\xa5\xbd'
 >>> "你好".encode("gbk","strict")
 b'\xc4\xe3\xba\xc3'
 ```
+
+
+
+### bytes.decode()
+
+decode() 方法以指定的编码格式解码 bytes 对象。默认编码为 'utf-8'。
+
+```
+bytes.decode(encoding="utf-8", errors="strict")
+```
+
+- encoding -- 要使用的编码，如"UTF-8"。
+- errors -- 设置不同错误的处理方案。默认为 'strict',意为编码错误引起一个UnicodeError。 其他可能得值有 'ignore', 'replace', 'xmlcharrefreplace', 'backslashreplace' 以及通过 codecs.register_error() 注册的任何值。
+
+该方法返回解码后的字符串。
+
+> ```
+> Help on method_descriptor:
+>
+> decode(...)
+>     B.decode(encoding='utf-8', errors='strict') -> str
+>     
+>     Decode B using the codec registered for encoding. Default encoding
+>     is 'utf-8'. errors may be given to set a different error
+>     handling scheme.  Default is 'strict' meaning that encoding errors raise
+>     a UnicodeDecodeError.  Other possible values are 'ignore' and 'replace'
+>     as well as any other name registerd with codecs.register_error that is
+>     able to handle UnicodeDecodeErrors.
+> ```
+
+```
+>>> b'ABC'.decode('ascii')
+'ABC'				# <class 'str'>
+>>> b'\xe4\xb8\xad\xe6\x96\x87'.decode('utf-8')
+'中文'
+```
+
+
+
+
 
 
 
