--- a/Python/Python Study Notes/00. Getting Started.md
+++ b/Python/Python Study Notes/00. Getting Started.md
@@ -106,7 +106,34 @@ BeautifulSoup
 
 
 
-### 0.3.1 Terminal
+### 0.3.1 Python IDLE
+
+> There are different versions of IDLE installed for each Python version. Depending on how you installed Python on Mac OS X, you may find different folders in **/Applications**. Look for a Python 3.n (n = 1 or 2) folder with an IDLE in it. Or, from a terminal command line, you may find an idle2.6 and an **idle3** or **idle3.1** or **idle3.2**.
+
+#### Python 2.X
+
+Mac > Spotlight Search > IDLE Python 2
+
+#### Python 3.X
+
+Mac > Spotlight Search > IDLE Python 3
+
+
+
+
+
+### 0.3.2 Terminal
+
+#### Mac Terminal 下查看 python 路径的方法
+
+```
+$ which python
+/Library/Frameworks/Python.framework/Versions/2.7/bin/python
+$ which python3
+/Library/Frameworks/Python.framework/Versions/3.4/bin/python3
+```
+
+
 
 #### Terminal切换不同版本python
 
@@ -152,7 +179,7 @@ exit()
 
 
 
-### 0.3.2 Brackets 
+### 0.3.3 Brackets 
 
 Brackets 运行python file:
 
@@ -163,18 +190,372 @@ Brackets 运行python file:
    ​
 
 
+### 0.3.4 Sublime Text 
 
-### 0.3.3 Sublime Text 
+#### 1. 设置Sublime Text的语法为python
 
-Sublime Text 运行 python file
+> View > syntax > python
 
-run a python file
+
+
+#### 2. 设置编译环境(默认python版本2.7)
+
+> Tools > Build System > Python
+
+
+
+#### 3. 添加编译环境 python3.4
+
+Sublime没有帮我们配置python3, 用python3的需要自己配置:
+
+> Tools -> Build System -> New Build System
+
+在打开的文件里面贴上以下代码:
+
+> 这个路径是你的python路径: /Library/Frameworks/Python.framework/Versions/3.4/bin/python3
+
+```
+{
+    "cmd": ["/Library/Frameworks/Python.framework/Versions/3.4/bin/python3", "-u", "$file"],
+    "file_regex": "^[ ]*File \"(...*?)\", line ([0-9]*)",
+    "selector": "source.python"
+}
+```
+
+保存为：Python 3.sublime-build 
+
+位于：/Users/yl/Library/Application Support/Sublime Text 3/Packages/User
+
+
+
+#### 4. 运行 python file
+
+run a python file:
+
+> print ('hello')
 
 Cmd + B (Tools > Build) 
 
+下面有打印就成功了
 
 
-### 0.3.4 Atom
+
+#### 5. Python PEP8 Autoformat 插件 自动格式化代码
+
+> Package Control : Install Package > Python PEP8 Autoformate
+
+快捷键 Ctrl + Shift + R 自动格式化python代码
+
+推荐配置:
+
+```
+{
+    "auto_complete": false,
+    "caret_style": "solid",
+    "ensure_newline_at_eof_on_save": true,
+    "find_selected_text": true,
+    "font_size": 11.0,
+    "highlight_modified_tabs": true,
+    "line_padding_bottom": 0,
+    "line_padding_top": 0,
+    "scroll_past_end": false,
+    "show_minimap": false,
+    "tab_size": 4,
+    "translate_tabs_to_spaces": true,
+    "trim_trailing_white_space_on_save": true,
+    "wide_caret": true,
+    "word_wrap": true,
+}
+```
+
+
+
+#### 6. SublimeREPL
+
+> Package Control : Install Package > SublimeREPL
+
+##### 设置快捷键
+
+Preferences > Key Bindings
+
+添加代码：
+
+```
+{
+    "keys": ["f5"],
+    "caption": "SublimeREPL: Python - RUN current file",
+    "command": "run_existing_window_command",
+    "args": {
+        "id": "repl_python_run",
+        "file": "config/Python/Main.sublime-menu"
+    }
+}
+```
+
+| Keyboard Shortcut | Command                                  |
+| ----------------- | ---------------------------------------- |
+| F3                | SublimeREPL (python 3.X)                 |
+| Cmd + F3          | SublimeREPL (python 2.X)                 |
+| F5                | SublimeREPL Run current file (python 3.X) |
+| Cmd + F5          | SublimeREPL Run current file (python 2.X) |
+| Shift + F3        | Executes a selection of text in an open REPL window |
+| Shift + F5        | Executes current file in an open REPL window |
+
+
+
+Executes a selection of text in an open REPL window
+
+```
+// Tools > SublimeREPL > Eval in REPL > Selection
+
+// Executes a selection of text in an open REPL window
+{ 
+  	"keys": ["shift+f3"], 
+    "command": "repl_transfer_current", 
+    "args": {
+        "scope": "selection"}
+    },
+```
+
+
+
+##### 设置 open Sublime REPL Python 版本
+
+修改文件 Main.sublime-menu（ /Users/yl/Library/Application Support/Sublime Text 3/Packages/SublimeREPL/config/Python ）
+
+> Preferences > Browse Packages  打开插件包
+
+**python 3 版本**，修改代码：
+
+```
+{"command": "repl_open",
+ "caption": "Python 3.4",
+ "id": "repl_python3",
+ "mnemonic": "P",
+ "args": {
+    "type": "subprocess",
+    "encoding": "utf8",
+    "cmd": ["/Library/Frameworks/Python.framework/Versions/3.4/bin/python3", "-i", "-u"],
+    "cwd": "$file_path",
+    "syntax": "Packages/Python/Python.tmLanguage",
+    "external_id": "python",
+    "extend_env": {"PYTHONIOENCODING": "utf-8"}
+    }
+},  
+```
+
+> `"caption": "Python 3.4",` 显示命令名称
+>
+> `"cmd": ["/Library/Frameworks/Python.framework/Versions/3.4/bin/python3", "-i", "-u"],` 改为python 3 安装位置。
+
+**python 2 版本**，修改代码：
+
+```
+{"command": "repl_open",
+ "caption": "Python",
+ "id": "repl_python",
+ "mnemonic": "P",
+ "args": {
+    "type": "subprocess",
+    "encoding": "utf8",
+    "cmd": ["python", "-i", "-u"],
+    "cwd": "$file_path",
+    "syntax": "Packages/Python/Python.tmLanguage",
+    "external_id": "python",
+    "extend_env": {"PYTHONIOENCODING": "utf-8"}
+    }
+},  
+```
+
+##### 修改后文件 Main.sublime-menu
+
+```
+[
+     {
+        "id": "tools",
+        "children":
+        [{
+            "caption": "SublimeREPL",
+            "mnemonic": "R",
+            "id": "SublimeREPL",
+            "children":
+            [
+                {"caption": "Python",
+                "id": "Python",
+
+                 "children":[
+                    {"command": "repl_open",
+                     "caption": "Python",
+                     "id": "repl_python",
+                     "mnemonic": "P",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "cmd": ["python", "-i", "-u"],
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {"PYTHONIOENCODING": "utf-8"}
+                        }
+                    },
+                    {"command": "repl_open",
+                     "caption": "Python 3.4",
+                     "id": "repl_python3",
+                     "mnemonic": "P",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "cmd": ["/Library/Frameworks/Python.framework/Versions/3.4/bin/python3", "-i", "-u"],
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {"PYTHONIOENCODING": "utf-8"}
+                        }
+                    },
+                    {"command": "python_virtualenv_repl",
+                     "id": "python_virtualenv_repl",
+                     "caption": "Python - virtualenv"},
+                    {"command": "repl_open",
+                     "caption": "Python - PDB current file",
+                     "id": "repl_python_pdb",
+                     "mnemonic": "D",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "cmd": ["python", "-i", "-u", "-m", "pdb", "$file_basename"],
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {"PYTHONIOENCODING": "utf-8"}
+                        }
+                    },
+                    {"command": "repl_open",
+                     "caption": "Python - RUN current file",
+                     "id": "repl_python_run",
+                     "mnemonic": "R",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "cmd": ["python", "-u", "$file_basename"],
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {"PYTHONIOENCODING": "utf-8"}
+                        }
+                    },
+                    {"command": "repl_open",
+                     "caption": "Python 3.4 - RUN current file",
+                     "id": "repl_python_run3",
+                     "mnemonic": "R",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "cmd": ["/Library/Frameworks/Python.framework/Versions/3.4/bin/python3", "-u", "$file_basename"],
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {"PYTHONIOENCODING": "utf-8"}
+                        }
+                    },
+                    {"command": "repl_open",
+                     "caption": "Python - IPython",
+                     "id": "repl_python_ipython",
+                     "mnemonic": "I",
+                     "args": {
+                        "type": "subprocess",
+                        "encoding": "utf8",
+                        "autocomplete_server": true,
+                        "cmd": {
+                            "osx": ["python", "-u", "${packages}/SublimeREPL/config/Python/ipy_repl.py"],
+                            "linux": ["python", "-u", "${packages}/SublimeREPL/config/Python/ipy_repl.py"],
+                            "windows": ["python", "-u", "${packages}/SublimeREPL/config/Python/ipy_repl.py"]
+                        },
+                        "cwd": "$file_path",
+                        "syntax": "Packages/Python/Python.tmLanguage",
+                        "external_id": "python",
+                        "extend_env": {
+                            "PYTHONIOENCODING": "utf-8",
+                            "SUBLIMEREPL_EDITOR": "$editor"
+                        }
+                    }
+                    }
+                ]}
+            ]
+        }]
+    }
+]
+```
+
+##### 修改后文件 Key Bindings
+
+```
+[
+  { 
+  	"keys": ["super+shift+r"], 
+    "command": "browser_refresh", 
+    "args": {
+      "auto_save": true,
+      "delay": 0.0,
+      "activate": false,
+      "browsers" : ["chrome"]}
+	},
+
+//Open interactive Python 3.4 REPL window
+  {
+    "keys": ["f3"],
+    "caption": "SublimeREPL: Python 3.4",
+    "command": "run_existing_window_command",
+    "args": {
+        "id": "repl_python3",
+        "file": "config/Python/Main.sublime-menu"}
+	},
+
+//Open interactive Python 2.7 REPL window
+  {
+    "keys": ["super+f3"],
+    "caption": "SublimeREPL: Python",
+    "command": "run_existing_window_command",
+    "args": {
+        "id": "repl_python",
+        "file": "config/Python/Main.sublime-menu"}
+	},
+
+//Run current file in interactive Python 3.4 REPL window
+  {
+    "keys": ["f5"],
+    "caption": "SublimeREPL: Python 3.4 - RUN current file",
+    "command": "run_existing_window_command",
+    "args": {
+        "id": "repl_python_run3",
+        "file": "config/Python/Main.sublime-menu"}
+	},
+
+//Run current file in interactive Python 2.7 REPL window
+  {
+    "keys": ["super+f5"],
+    "caption": "SublimeREPL: Python - RUN current file",
+    "command": "run_existing_window_command",
+    "args": {
+        "id": "repl_python_run",
+        "file": "config/Python/Main.sublime-menu"}
+	},
+
+// Executes a selection of text in an open REPL window
+  { 
+  	"keys": ["shift+f3"], 
+    "command": "repl_transfer_current", 
+    "args": {
+        "scope": "selection"}
+    },
+]
+
+```
+
+
+
+
+
+### 0.3.5 Atom
 
 Atom配置python
 
@@ -186,7 +567,7 @@ Atom配置python
 
 
 
-### 0.3.5 Visual Studio Code
+### 0.3.6 Visual Studio Code
 
 VSCode配置Python开发环境:
 
@@ -229,7 +610,7 @@ VSCode配置Python开发环境:
 
 
 
-### 0.3.6 Eclipse IDE
+### 0.3.7 Eclipse IDE
 
 #### Mac 配置Python集成开发环境（Eclipse +Python+Pydev)
 
@@ -329,7 +710,7 @@ https://www.eclipse.org/mpc/
 
 
 
-### 0.3.7 Pycharm
+### 0.3.8 Pycharm
 
 Download Pycharm :
 
@@ -341,7 +722,7 @@ Preferences > Project: Python project > Project Interpreter
 
 
 
-### 0.3.8 Canopy
+### 0.3.9 Canopy
 
 Download Canopy
 
