--- a/Python/Python Study Notes/11. if while for.md
+++ b/Python/Python Study Notes/11. if while for.md
@@ -374,8 +374,21 @@ skip odd numbers:
 x = 10 
 while x:
 	x = x−1 					# Or, x -= 1
-	if x % 2 != 0: continue 	# Odd? -- skip print
+	if x % 2 != 0: continue 	# Odd? -- skip print. hit continue, go to while x
 	print(x, end=' ')			# it prints 8 6 4 2 0
+```
+
+
+
+```
+res = [2]
+for x in [1,2,3,4]:
+    if x in res: continue		# skip 2. hit continue, go to  for x in [1,2,3,4]:
+    print(x)
+--------------------------------------------------------------------------------------------------
+1
+3
+4
 ```
 
 
