--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -1268,9 +1268,9 @@ These special matching modes break down into function calls and definitions as f
 
 - In a function header (the rest of the table), a simple `name` is matched by position or name depending on how the caller passes it, but the `name=value` form specifies a default value. The `*name` form collects any extra unmatched positional arguments in a tuple, and the `**name` form collects extra keyword arguments in a dictionary. In Python 3.X, any normal or defaulted argument names following a `*name` or a bare `*` are keyword-only arguments and must be passed by keyword in calls.
 
-#### The Gritty Details
+#### The Gritty Details (Combine Special Argument Ordering rules)
 
-If you choose to use and combine the special argument-matching modes, Python will ask you to follow these ordering rules among the modes’ optional components:
+If you choose to use and **combine the special argument-matching modes**, Python will ask you to **follow these ordering rules among the modes’ optional components**:
 
 - **In a function call**, arguments must appear in this order: 
   1. any positional arguments ( `value` ); 
@@ -1407,7 +1407,7 @@ the `*` / `**` starred-argument syntax in the function header and the function c
 
 ##### Headers: Collecting arguments
 
-1. `*args`
+1. `*args` (tuple)
 
 The first use, in the function definition, collects unmatched positional arguments into a tuple. **When this function is called, Python collects all the positional arguments into a new tuple and assigns the variable `args` to that tuple**:
 
@@ -1425,7 +1425,7 @@ The first use, in the function definition, collects unmatched positional argumen
 (1, 2, 3, 4)
 ```
 
-2. `**args`
+2. `**args` (dictionary)
 
 The ** feature is similar, but **it only works for keyword arguments**—**it collects them into a new dictionary**, which can then be processed with normal dictionary tools. In a sense, the `**` form allows you to **convert from keywords to dictionaries,** which you can then step through with keys calls, dictionary iterators, and the like (this is roughly what the dict call does when passed keywords, but **it returns the new dictionary**):
 
@@ -1500,7 +1500,18 @@ func(*open('fname'))
 
 
 
+##### The unpacking call syntax form
+
+```
+>>> echo(0, c=5, *pargs, **kargs) 		# Normal, keyword, *sequence, **dictionary
+(0, 1, 2) {'a': 3, 'c': 5, 'b': 4}
+```
+
+
+
 ##### Applying functions generically
+
+> the real power of the special “varargs” call syntax is that you don’t need to know how many arguments a function call requires before you write a script
 
 you can use `if` logic to select from a set of functions and argument lists, and call any of them generically (functions in some of the following examples are hypothetical):
 
@@ -1513,7 +1524,303 @@ else:
 action(*args)							# Dispatch generically
 ```
 
+this varargs call syntax is useful anytime you cannot predict the arguments list.
 
+```
+>>> ...define or import func3...
+>>> args = (2,3)
+>>> args += (4,)
+>>> args (2, 3, 4)
+>>> func3(*args)
+```
+
+
+
+##### The defunct apply built-in (Python 2.X) 废弃的apply内置函数
+
+Prior to Python 3.X, the effect of the `*args` and `**args` varargs call syntax could be achieved with a built-in function named `apply`. 这一技术在 Python 3 中已废除
+
+**the following are equivalent prior to Python 3.X:**
+
+```
+func(*pargs, **kargs) 			# Newer call syntax: func(*sequence, **dict)
+apply(func, pargs, kargs)		# Defunct built-in: apply(func, sequence, dict)
+```
+
+example, consider the following function, which accepts any number of positional or keyword arguments:
+
+```
+>>> def echo(*args, **kwargs): print(args, kwargs)
+>>> echo(1, 2, a=3, b=4) 
+(1, 2) {'a': 3, 'b': 4}
+-----------------------------------------------------------------------------------------
+>>> pargs = (1, 2)
+>>> kargs = {'a':3, 'b':4}
+
+>>> apply(echo, pargs, kargs) 		# In Python 2.X, we can call it generically with apply
+(1, 2) {'a': 3, 'b': 4}
+
+>>> echo(*pargs, **kargs) 			# with the call syntax that is now required in 3.X:
+(1, 2) {'a': 3, 'b': 4}
+```
+
+
+
+#### Python 3.X Keyword-Only Arguments
+
+**keyword-only arguments are coded as named arguments that may appear after `*args` in the arguments list. All such arguments must be passed using keyword syntax in the call.**
+
+E xample:
+
+1. keyword-only arguments are coded as named arguments that may appear after `*args` in the arguments list:
+
+```
+>>> def kwonly(a, *b, c):		# a  may be passed by name or position,
+		print(a, b, c)			# b  collects any extra positional arguments,
+								# c  must be passed by keyword only
+>>> kwonly(1, 2, c=3) 
+1 (2,) 3
+>>> kwonly(a=1, c=3) 
+1 () 3
+>>> kwonly(1, 2, 3) 
+TypeError: kwonly() missing 1 required keyword-only argument: 'c'
+
+```
+
+2. use a `*` character by itself in the arguments list to indicate that a function does not accept a variable-length argument list but still expects all arguments following the `*` to be passed as keywords:
+
+```
+>>> def kwonly(a, *, b, c):		# a  may be passed by position or name
+		print(a, b, c)			# no extra positionals are allowed
+								# b and c must be keywords 
+>>> kwonly(1, c=3, b=2) 
+1 2 3
+>>> kwonly(c=3, b=2, a=1) 
+1 2 3
+>>> kwonly(1, 2, 3) 
+TypeError: kwonly() takes 1 positional argument but 3 were given
+>>> kwonly(1) 
+TypeError: kwonly() missing 2 required keyword-only arguments: 'b' and 'c'
+```
+
+3. use defaults for keyword-only arguments, even though they appear after the `*` in the function header:
+
+```
+>>> def kwonly(a, *, b='spam', c='ham'):	# a may be passed by name or position
+		print(a, b, c)			    # no extra positionals are allowed 
+									# b and c are optional but must be passed by keyword if used
+>>> kwonly(1) 
+1 spam ham
+>>> kwonly(1, c=3) 
+1 spam 3
+>>> kwonly(a=1) 
+1 spam ham
+>>> kwonly(c=3, b=2, a=1) 
+1 2 3
+>>> kwonly(1, 2) 
+TypeError: kwonly() takes 1 positional argument but 2 were given
+```
+
+4. keyword-only arguments with defaults are optional, but those without defaults effectively become required keywords for the function:
+
+```
+>>> def kwonly(a, *, b, c='spam'):
+		print(a, b, c)
+
+>>> kwonly(1, b='eggs') 
+1 eggs spam
+>>> kwonly(1, c='eggs') 
+TypeError: kwonly() missing 1 required keyword-only argument: 'b'
+>>> kwonly(1, 2) 
+TypeError: kwonly() takes 1 positional argument but 2 were given
+--------------------------------------------------------------------------------------------------
+>>> def kwonly(a, *, b=1, c, d=2):
+		print(a, b, c, d)
+
+>>> kwonly(3, c=4) 
+3 1 4 2
+>>> kwonly(3, c=4, b=5) 
+3 5 4 2
+>>> kwonly(3) 
+TypeError: kwonly() missing 1 required keyword-only argument: 'c'
+>>> kwonly(1, 2, 3) 
+TypeError: kwonly() takes 1 positional argument but 3 were given
+```
+
+##### Ordering rules
+
+1. note that keyword-only arguments must be specified after a single star, not two —named arguments cannot appear after the `**args` arbitrary keywords form
+2. a `**` can’t appear by itself in the arguments list.
+
+Both attempts generate a syntax error:
+
+```
+>>> def kwonly(a, **pargs, b, c): 
+SyntaxError: invalid syntax
+>>> def kwonly(a, **, b, c): 
+SyntaxError: invalid syntax
+```
+
+- in a function header, **keyword-only arguments** must be coded 
+
+  after the `*args` arbitrary positional form,  and 
+
+  before the `**args` arbitrary keywords form 
+
+- when both are present. Whenever an argument name appears before `*args`, it is a possibly default positional argument, not keyword-only:
+
+```
+>>> def f(a, *b, **d, c=6): print(a, b, c, d) 		# Keyword-only must before **
+SyntaxError: invalid syntax
+
+>>> def f(a, *b, c=6, **d): print(a, b, c, d)		# Collect args in header 
+
+>>> f(1, 2, 3, x=4, y=5) 							# Default used
+1 (2, 3) 6 {'y': 5, 'x': 4}
+
+>>> f(1, 2, 3, x=4, y=5, c=7) 						# Override default
+1 (2, 3) 7 {'y': 5, 'x': 4}
+
+>>> f(1, 2, 3, c=7, x=4, y=5) 						# Anywhere in keywords
+1 (2, 3) 7 {'y': 5, 'x': 4}
+
+>>> def f(a, c=6, *b, **d): print(a, b, c, d)		# c is not keyword-only here!
+
+>>> f(1, 2, 3, x=4) 
+1 (3,) 2 {'x': 4}
+```
+
+**similar ordering rules hold true in function calls:** 
+
+1. when keyword-only arguments are passed, they must appear before a `**args` form. 
+2. The keyword-only argument can be coded either before or after the `*args`, though, and may be included in `**args`:
+
+```
+>>> def f(a, *b, c=6, **d): print(a, b, c, d)		# KW-only between * and **
+
+>>> f(1, *(2, 3), **dict(x=4, y=5)) 				# Unpack args at call
+1 (2, 3) 6 {'y': 5, 'x': 4}
+
+>>> f(1, *(2, 3), **dict(x=4, y=5), c=7) 			# Keywords must before **args
+SyntaxError: invalid syntax
+
+>>> f(1, *(2, 3), c=7, **dict(x=4, y=5)) 			# Override default
+1 (2, 3) 7 {'y': 5, 'x': 4}
+
+>>> f(1, c=7, *(2, 3), **dict(x=4, y=5)) 			# After or before *
+1 (2, 3) 7 {'y': 5, 'x': 4}
+
+>>> f(1, *(2, 3), **dict(x=4, y=5, c=7)) 			# Keyword-only in **
+1 (2, 3) 7 {'y': 5, 'x': 4}
+```
+
+keyword-only arguments make it easier to allow a function to accept both any number of positional arguments to be processed, and configuration options passed as keywords.
+
+
+
+#### Example: The min Wakeup Call
+
+Suppose you want to code a function that is able to **compute the minimum value from an arbitrary set of arguments and an arbitrary set of object data types.**
+
+- The first function fetches the first argument (`args` is a tuple) and traverses the rest by slicing off the first (there’s no point in comparing an object to itself, especially if it might be a large structure).
+
+
+- The second version lets Python pick off the first and rest of the arguments auto-matically, and so avoids an index and slice.
+
+
+
+- The third converts from a tuple to a list with the built-in `list` call and employs the list `sort` method.
+
+```
+def min1(*args):
+	res = args[0]
+	for arg in args[1:]:
+		if arg < res:
+			res = arg
+		return res
+		
+def min2(first, *rest):
+	for arg in rest:
+		if arg < first:
+			first = arg
+	return first
+    
+def min3(*args):
+	tmp = list(args)		# Or, in Python 2.4+: return sorted(args)[0]
+	tmp.sort()
+	return tmp[0]
+	
+print(min1(3, 4, 1, 2)) 
+print(min2("bb", "aa")) 
+print(min3([2,2], [1,1], [3,3]))
+---------------------------------------------------------------------------------
+1 
+aa 
+[1, 1]
+```
+
+> The `sort` method is coded in C, so it can be quicker than the other approaches at times, but the linear scans of the first two techniques may make them faster much of the time.
+
+
+
+**generalize a single function to compute either a minimum or a maximum value**
+
+```
+def minmax(test, *args):
+	res = args[0]
+	for arg in args[1:]:
+		if test(arg, res):
+			res = arg
+	return res
+	
+def lessthan(x, y): return x < y			# See also: lambda, eval
+def greterthan(x, y): return x > y
+
+print(minmax(lessthan, 4,2,1,5,6,3))		# Self-test code
+print(minmax(greterthan, 4,2,1,5,6,3))
+------------------------------------------------------------------------------------------
+1
+6
+```
+
+
+
+#### Example: Generalized Set Functions
+
+```python
+def intersect(*args):
+    res = []
+    for x in args[0]:					# Scan first sequence
+        if x in res: continue			# Skip duplicates. hit continue, go to for x in args[0]:
+        for other in args[1:]:			# For all other args
+            if x not in other: break	# hit break,Jumps out of the closest enclosing loop 
+        else:							# No: break out of loop
+            res.append(x)				# Yes: add items to end
+    return res
+
+def union(*args):
+    res = []
+    for seq in args:				# For all args
+        for x in seq:				# For all nodes
+            if not x in res:
+                res.append(x)		# Add new items to result
+    return res
+------------------------------------------------------------------------------------------------
+>>> from inter2 import intersect, union
+>>> s1, s2, s3 = "SPAM", "SCAM", "SLAM"
+
+>>> intersect(s1, s2), union(s1, s2) 			# Two operands
+(['S', 'A', 'M'], ['S', 'P', 'A', 'M', 'C'])
+
+>>> intersect([1, 2, 3], (1, 4)) 				# Mixed types
+[1]
+
+>>> intersect(s1, s2, s3) 						# Three operands
+['S', 'A', 'M']
+
+>>> union(s1, s2, s3) 
+['S', 'P', 'A', 'M', 'C', 'L']
+```
 
 
 
