--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -1873,7 +1873,7 @@ This chapter introduces a collection of more advanced function-related topics: r
 
 
 
-### Function Design Concepts
+### Function Design Concepts / 函数设计概念
 
 > When you start using functions in earnest, you’re faced with choices about how to glue components together—for instance, how to decompose a task into purposeful functions (known as cohesion 聚合), how your functions should communicate (called coupling 耦合), and so on. You also need to take into account concepts such as the size of your functions, because they directly impact code usability. Some of this falls into the category of structured analysis and design, but it applies to Python code as to any other.
 
@@ -1902,7 +1902,7 @@ In general though, you should strive to minimize external dependencies in functi
 
 
 
-### Recursive Functions
+### Recursive Functions / 递归函数
 
 #### Summation with Recursion
 
@@ -1926,6 +1926,186 @@ Here’s what a custom summing function might look like when coded with recursio
 []
 15
 ```
+
+
+
+#### Coding Alternatives
+
+```python
+def mysum(L):
+	return 0 if not L else L[0] + mysum(L[1:])			# Use ternary expression 
+														# (not work with string)
+
+def mysum(L):
+	return L[0] if len(L) == 1 else L[0] + mysum(L[1:])	# Any type, assume one
+
+def mysum(L):
+	first, *rest = L 
+	return first if not rest else first + mysum(rest)	# Use 3.X ext seq assign
+----------------------------------------------------------------------------------------
+>>> mysum([1]) 						# mysum([]) fails in last 2
+1
+
+>>> mysum([1, 2, 3, 4, 5]) 
+15
+
+>>> mysum(('s', 'p', 'a', 'm')) 	# But various types now work
+'spam'
+
+>>> mysum(['spam', 'ham', 'eggs']) 
+'spamhameggs'
+```
+
+- The latter two also work on a single string argument (e.g., `mysum('spam')`), because strings are sequences of one-character strings.
+
+
+- The third variant works on arbitrary iterables, including open input files (`mysum(open(name))`), but the others do not because they index (Chapter 14 illustrates extended sequence assignment on files).
+
+
+
+- The function header `def mysum(first, *rest)`, although similar to the third var-iant, wouldn’t work at all, because it expects individual arguments, not a single iterable.
+
+recursion can be direct, or indirect, as in the following (a function that calls another function, which calls back to its caller):
+
+```python
+>>> def mysum(L):
+...     if not L: return 0
+...     return nonempty(L)			# Call a function that calls me
+... 
+>>> def nonempty(L):
+...     return L[0] + mysum(L[1:])	# Indirectly recursive
+... 
+>>> mysum([1.1, 2.2, 3.3, 4.4])
+11.0
+```
+
+
+
+#### Loop Statements Versus Recursion
+
+The `while`, for example, often makes things a bit more concrete, and it doesn’t require that a function be defined to allow recursive calls:
+
+```python
+>>> L = [1, 2, 3, 4, 5]
+>>> sum = 0
+>>> while L:
+...     sum += L[0]
+...     L = L[1:]
+... 
+>>> sum
+15
+```
+
+`for` loops iterate for us automatically, making recursion largely extraneous in many cases (and, in all likelihood, less efficient in terms of memory space and execution time):
+
+```python
+>>> L = [1, 2, 3, 4, 5]
+>>> sum = 0
+>>> for x in L: sum += x
+... 
+>>> sum
+15
+```
+
+With looping statements, we don’t require a fresh copy of a local scope on the call stack for each iteration, and we avoid the speed costs associated with function calls in general.
+
+
+
+#### Handling Arbitrary Structures
+
+recursion—or equivalent explicit stack-based algorithms—can be required to traverse arbitrarily shaped structures.
+
+**Example :** 
+
+consider the task of computing the sum of all the numbers in a nested sublists structure like this:
+
+```
+[1, [2, [3, 4], 5], 6, [7, 8]]			# Arbitrarily nested sublists
+```
+
+> Simple looping statements won’t work here because this is not a linear iteration. Nested looping statements do not suffice either, because the sublists may be nested to arbitrary depth and in an arbitrary shape—there’s no way to know how many nested loops to code to handle all cases. Instead, the following code accommodates such general nesting by using recursion to visit sublists along the way:
+
+```python
+def sumtree(L):
+    tot = 0
+    for x in L:							# For each item at this level
+        if not isinstance(x, list):
+            tot += x					# Add numbers directly
+        else:
+            tot += sumtree(x)			# Recur for sublists
+    return tot
+
+L = [1, [2, [3,4], 5], 6, [7, 8]]		# Arbitrary nesting
+print(sumtree(L))						# Prints 36
+
+# Pathological cases
+print(sumtree([1, [2, [3, [4, [5]]]]]))	# Prints 15 (right-heavy)
+print(sumtree([[[[[1], 2], 3], 4], 5]))	# Prints 15 (left-heavy)
+```
+
+
+
+##### Recursion versus queues and stacks
+
+Python implements recursion by pushing information on a call stack at each recursive call, so it remembers where it must return and continue later. In fact, it’s generally possible to implement recursive-style procedures without recursive calls, by using an explicit stack or queue of your own to keep track of remaining steps.
+
+**Example :**
+
+uses an explicit list to schedule when it will visit items in the subject, instead of issuing recursive calls; the item at the front of the list is always the next to be processed and summed:
+
+this code traverses the list in breadth-first fashion by levels, because it adds nested lists’ contents to the end of the list, forming a **first-in-first-out queue**.
+
+```python
+def sumtree(L):                         # Breadth-first, explicit queue
+    tot = 0
+    items = list(L)                     # Start with copy of top level
+    while items:
+        front = items.pop(0)            # Fetch/delete front item
+        if not isinstance(front, list):
+            tot += front                # Add numbers directly
+        else:
+            items.extend(front)         # <== Append all in nested list
+    return tot
+
+print(sumtree([1, 2, 3, 4]))
+```
+
+**Example :**
+
+To emulate the traversal of the recursive call version more closely, we can change it to perform depth-first traversal simply by adding the content of nested lists to the front of the list, forming a **last-in-first-out stack**:
+
+```python
+def sumtree(L):                         # Depth-first, explicit stack
+    tot = 0
+    items = list(L)                     # Start with copy of top level
+    while items:
+        front = items.pop(0)            # Fetch/delete front item
+        if not isinstance(front, list):
+            tot += front                # Add numbers directly
+        else:
+            items[:0] = front           # <== Prepend all in nested list
+    return tot
+
+print(sumtree([1, 2, 3, 4]))
+```
+
+
+
+##### Cycles, paths, and stack limits
+
+see page 560
+
+
+
+### Function Objects: Attributes and Annotations / 函数对象：属性和注解
+
+#### Indirect Function Calls: “First Class” Objects
+
+
+
+
+
+
 
 
 
